--- a/_includes/sections/Publications.html
+++ b/_includes/sections/Publications.html
@@ -45,67 +45,54 @@
 
 
 
-<section>
-
-  <h3>Ph.D.</h3>
-  <ul class="publi">
-    <li id="mazet05-these">
-  <span class="pub-title">To be published after my defense. Stay tuned!</span>
-</li>
-
-  </ul>
-
-</section>
 
 
 
-<section>
+  <h2 >Ph.D. thesis</h2>
+    <!––sigpro18-->
+</div> <ul style="list-style-type: none">
+   <li class="entry wow zoomIn">
+     <h4><strong>To be published after my defense. Stay tuned!</strong>
+   </h4>
+     Hassan Mortada<br />
+      <br /> </li> </ul>
 
-  <h3>Journal Papers</h3>
-  <ul class="publi">
-    <li id="Mor18-journal">
-  <span class="pub-title">Parameterized source separation for delayed spectroscopic signals.</span>
-  <span class="pub-plus">H. Mortada, V. Mazet, C. Soussen, C. Collet, L. Poisson,
-  <i>Preprints</i>,
-  2018.</span>
-</li>
+  <h2 >Journal Papers</h2>
+    <!––sigpro18-->
+</div> <ul style="list-style-type: none">
+   <li class="entry wow zoomIn">
+     <h4><strong>Parameterized source separation for delayed spectroscopic signals.</strong>
+   </h4>
+     H. Mortada, V. Mazet, C. Soussen, C. Collet and L. Poisson. Preprints<br />
+      <br /> </li> </ul>
 
-  </ul>
-
-</section>
-
-<section>
-
-  <h3>Conference Papers</h3>
-  <ul class="publi">
-    <li id="mortada18-whispers">
-  <span class="pub-title">Spectroscopic decomposition of astronomical multispectral images using B-splines.</span>
-  <span class="pub-plus">H. Mortada, V. Mazet, C. Soussen, C. Collet,
-  IEEE Whispers 2018, september 2018.</span>
+  <h2 >Conference Papers</h2>
+  <!––whispers18-->
+  </div> <ul style="list-style-type: none">
+  <li class="entry wow zoomIn">
+  <h4><strong>Spectroscopic decomposition of astronomical multispectral images using B-splines.</strong>
   <a href=https://drive.google.com/open?id=18lVTMJKfIA9zH9yEh0Kb_vQzwR5B3Ilx target="blank"><i class="fa fa-file-pdf-o"></i></a>
-</li>
+  </h4>
+  H. Mortada, V. Mazet, C. Soussen and C. Collet.   IEEE Whispers 2018, september 2018.<br />
+  <br /> </li> </ul>
 
-
-    <li id="mortada17-gretsi">
-  <span class="pub-title">Séparation de sources retardées et paramétriques.</span>
-  <span class="pub-plus">H. Mortada, V. Mazet, C. Soussen, C. Collet,
-  GRETSI 2017 5-8 september 2017, Juan-les-Pins, France.</span>
+ <!––gretsi17-->
+  </div> <ul style="list-style-type: none">
+  <li class="entry wow zoomIn">
+  <h4><strong>Séparation de sources retardées et paramétriques.</strong>
   <a href=https://drive.google.com/open?id=1jc-E5S6oWgXuADGtOB9EFz8IgWtp2KIf target="blank"><i class="fa fa-file-pdf-o"></i></a>
-</li>
+  </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  GRETSI 2017 5-8 september 2017, Juan-les-Pins, France.<br />
+  <br /> </li> </ul>
+
+  <!––eusipco17-->
+   </div> <ul style="list-style-type: none">
+   <li class="entry wow zoomIn">
+   <h4><strong>Separation of Delayed Parameterized Sources.</strong>
+   <a href=https://drive.google.com/open?id=1zChiO_izNNRffYYWbMqWLdas1lsOnQSg target="blank"><i class="fa fa-file-pdf-o"></i></a>
+   </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  EUSIPCO 2017, 28 august-2 september 2017, Kos Island, Greece.<br />
+   <br /> </li> </ul>
 
 
-
-    <li id="mortada17-eusipco">
-  <span class="pub-title">Separation of Delayed Parameterized Sources.</span>
-  <span class="pub-plus">H. Mortada, V. Mazet, C. Soussen, C. Collet,
-  EUSIPCO 2017, 28 august-2 september 2017, Kos Island, Greece.</span>
-  <a href=https://drive.google.com/open?id=1zChiO_izNNRffYYWbMqWLdas1lsOnQSg target="blank"><i class="fa fa-file-pdf-o"></i></a>
-</li>
-
-
-  </ul>
-
-</section>
 
 
     </article>
