--- a/_includes/sections/Publications.html
+++ b/_includes/sections/Publications.html
@@ -1,115 +1,58 @@
-
-
-<div class="row">
-    <div class="col-lg-12 text-center">
-        <div class="navy-line"></div>
-        <h1>Publications</h1>
+<div class="container" id="i18_publications">
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <div class="navy-line"></div>
+            <h1><span data-i18n="publications.publications">Publications</span></h1>
+        </div>
     </div>
-</div>
+    <div class="row features-block">
+      <h2 >Ph.D. thesis</h2>
+        <!––phd-->
+      </div> <ul style="list-style-type: none">
+       <li class="entry wow zoomIn">
+         <h4><strong>To be published after my defense. Stay tuned!</strong>
+       </h4>
+         Hassan Mortada<br />
+          <br /> </li> </ul>
 
+<div class="row features-block">
+          <h2 >Journal Papers</h2>
+            <!––sigpro18-->
+        </div> <ul style="list-style-type: none">
+           <li class="entry wow zoomIn">
+             <h4><strong>Parameterized source separation for delayed spectroscopic signals.</strong>
+           </h4>
+             H. Mortada, V. Mazet, C. Soussen, C. Collet and L. Poisson. Preprints<br />
+              <br /> </li> </ul>
 
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<div class="row features-block">
+              <h2 >Conference Papers</h2>
+              <!––whispers18-->
+              </div> <ul style="list-style-type: none">
+              <li class="entry wow zoomIn">
+              <h4><strong>Spectroscopic decomposition of astronomical multispectral images using B-splines.</strong>
+              <a href=https://drive.google.com/open?id=18lVTMJKfIA9zH9yEh0Kb_vQzwR5B3Ilx target="blank"><i class="fa fa-file-pdf-o"></i></a>
+              </h4>
+              H. Mortada, V. Mazet, C. Soussen and C. Collet.   IEEE Whispers 2018, september 2018.<br />
+              <br /> </li> </ul>
+<div class="row features-block">
+              <!––gretsi17-->
+              </div> <ul style="list-style-type: none">
+              <li class="entry wow zoomIn">
+              <h4><strong>Séparation de sources retardées et paramétriques.</strong>
+              <a href=https://drive.google.com/open?id=1jc-E5S6oWgXuADGtOB9EFz8IgWtp2KIf target="blank"><i class="fa fa-file-pdf-o"></i></a>
+              </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  GRETSI 2017 5-8 september 2017, Juan-les-Pins, France.<br />
+              <br /> </li> </ul>
 
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width">
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic' rel='stylesheet' type='text/css'>
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-  <link rel="Start" href="../index.html" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-
-  <!--[if lt IE 9]>
-    <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
-  <![endif]-->
-
-</head>
-
-<body>
-
-<!-- HEAD -->
-
-
-
-<!-- MAIN -->
-
-<div class="main-container">
-  <div class="main wrapper clearfix">
-    <article>
-
-
-
-
-
-
-  <h2 >Ph.D. thesis</h2>
-    <!––sigpro18-->
-</div> <ul style="list-style-type: none">
-   <li class="entry wow zoomIn">
-     <h4><strong>To be published after my defense. Stay tuned!</strong>
-   </h4>
-     Hassan Mortada<br />
-      <br /> </li> </ul>
-
-  <h2 >Journal Papers</h2>
-    <!––sigpro18-->
-</div> <ul style="list-style-type: none">
-   <li class="entry wow zoomIn">
-     <h4><strong>Parameterized source separation for delayed spectroscopic signals.</strong>
-   </h4>
-     H. Mortada, V. Mazet, C. Soussen, C. Collet and L. Poisson. Preprints<br />
-      <br /> </li> </ul>
-
-  <h2 >Conference Papers</h2>
-  <!––whispers18-->
-  </div> <ul style="list-style-type: none">
-  <li class="entry wow zoomIn">
-  <h4><strong>Spectroscopic decomposition of astronomical multispectral images using B-splines.</strong>
-  <a href=https://drive.google.com/open?id=18lVTMJKfIA9zH9yEh0Kb_vQzwR5B3Ilx target="blank"><i class="fa fa-file-pdf-o"></i></a>
-  </h4>
-  H. Mortada, V. Mazet, C. Soussen and C. Collet.   IEEE Whispers 2018, september 2018.<br />
-  <br /> </li> </ul>
-
- <!––gretsi17-->
-  </div> <ul style="list-style-type: none">
-  <li class="entry wow zoomIn">
-  <h4><strong>Séparation de sources retardées et paramétriques.</strong>
-  <a href=https://drive.google.com/open?id=1jc-E5S6oWgXuADGtOB9EFz8IgWtp2KIf target="blank"><i class="fa fa-file-pdf-o"></i></a>
-  </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  GRETSI 2017 5-8 september 2017, Juan-les-Pins, France.<br />
-  <br /> </li> </ul>
-
-  <!––eusipco17-->
-   </div> <ul style="list-style-type: none">
-   <li class="entry wow zoomIn">
-   <h4><strong>Separation of Delayed Parameterized Sources.</strong>
-   <a href=https://drive.google.com/open?id=1zChiO_izNNRffYYWbMqWLdas1lsOnQSg target="blank"><i class="fa fa-file-pdf-o"></i></a>
-   </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  EUSIPCO 2017, 28 august-2 september 2017, Kos Island, Greece.<br />
-   <br /> </li> </ul>
+<div class="row features-block">
+              <!––eusipco17-->
+               </div> <ul style="list-style-type: none">
+               <li class="entry wow zoomIn">
+               <h4><strong>Separation of Delayed Parameterized Sources.</strong>
+               <a href=https://drive.google.com/open?id=1zChiO_izNNRffYYWbMqWLdas1lsOnQSg target="blank"><i class="fa fa-file-pdf-o"></i></a>
+               </h4> H. Mortada, V. Mazet, C. Soussen and C. Collet.  EUSIPCO 2017, 28 august-2 september 2017, Kos Island, Greece.<br />
+               <br /> </li> </ul>
 
 
 
-
-    </article>
-  </div>
-</div>
-
-<!-- FOOT -->
-
-<div class="footer-container">
-  <footer class="wrapper">
-
-  </footer>
-</div>
-
-<!-- SCRIPTS -->
-
-
-
-</body>
-</html>
+    </div>
