--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -2,7 +2,7 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="link.link">Link</span></h1>
+            <h1><span data-i18n="link.link">Links</span></h1>
         </div>
     </div>
     <div class="row">
@@ -22,8 +22,6 @@
             <p>{{ link.desc }}</p>
             <ul class="list-inline social-icon">
                 <li><a href="{{ link.website }}" target="blank"><i class="fa fa-link"></i></a>
-                </li>
-                <li><a href="mailto:{{ link.email }}"><i class="fa fa-envelope-o"></i></a>
                 </li>
             </ul>
         </div>
