--- a/_includes/sections/Publications.html
+++ b/_includes/sections/Publications.html
@@ -21,7 +21,7 @@
         </div> <ul style="list-style-type: none">
            <li class="entry wow zoomIn">
              <h4><strong>Parameterized source separation for delayed spectroscopic signals. </strong>
-               <a href=https://www.sciencedirect.com/science/article/pii/S0165168418304067?via%3Dihub#! target="blank"><i class="fa fa-file-pdf-o"></i></a>
+               <a href=https://drive.google.com/file/d/1Xa4hlgdixMZDsYMXFwudI-3DMWCSRoMW/view?usp=sharing target="blank"><i class="fa fa-file-pdf-o"></i></a>
            </h4>
              H. Mortada, V. Mazet, C. Soussen, C. Collet and L. Poisson. Signal Processing, vol. 158, may 2019, p. 48-60.<br />
               <br /> </li> </ul>
