--- a/_includes/sections/Publications.html
+++ b/_includes/sections/Publications.html
@@ -10,7 +10,8 @@
         <!––phd-->
       </div> <ul style="list-style-type: none">
        <li class="entry wow zoomIn">
-         <h4><strong>To be published after my defense. Stay tuned!</strong>
+         <h4><strong>separation of parameterized and delayed sources: application to spectroscopic and  multispectral data </strong>
+           <a href=https://drive.google.com/file/d/1-JjuQp0WzbWsFO2CEdnH4kaUwcVofcWN/view target="blank"><i class="fa fa-file-pdf-o"></i></a>
        </h4>
          Hassan Mortada<br />
           <br /> </li> </ul>
