--- a/_includes/sections/Publications.html
+++ b/_includes/sections/Publications.html
@@ -11,7 +11,7 @@
       </div> <ul style="list-style-type: none">
        <li class="entry wow zoomIn">
          <h4><strong>separation of parameterized and delayed sources: application to spectroscopic and  multispectral data </strong>
-           <a href=https://drive.google.com/file/d/1-JjuQp0WzbWsFO2CEdnH4kaUwcVofcWN/view target="blank"><i class="fa fa-file-pdf-o"></i></a>
+           <a href=https://hal.archives-ouvertes.fr/tel-02163202v1 target="blank"><i class="fa fa-file-pdf-o"></i></a>
        </h4>
          Hassan Mortada<br />
           <br /> </li> </ul>
@@ -29,6 +29,17 @@
 
 <div class="row features-block">
               <h2 >Conference Papers</h2>
+                  <!––Submitted-->
+              </div> <ul style="list-style-type: none">
+              <li class="entry wow zoomIn">
+              <h4><strong>Structured dictionary optimization: application to the modulated wideband converter.</strong>
+              <a href=https:// target="blank"><i class="fa fa-file-pdf-o"></i></a>
+              </h4>
+              H. Mortada, O. Rabaste, J. Bosse. <br />
+              <br /> </li> </ul>
+    
+    
+    <div class="row features-block">
               <!––whispers18-->
               </div> <ul style="list-style-type: none">
               <li class="entry wow zoomIn">
@@ -37,6 +48,8 @@
               </h4>
               H. Mortada, V. Mazet, C. Soussen and C. Collet.   IEEE Whispers 2018, september 2018.<br />
               <br /> </li> </ul>
+    
+    
 <div class="row features-block">
               <!––gretsi17-->
               </div> <ul style="list-style-type: none">
